[project]
name = "entangled-cli"
version = "2.1.12"
description = "Literate Programming toolbox"
authors = [{ name = "Johan Hidding", email = "j.hidding@esciencecenter.nl" }]
requires-python = "~=3.11"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    "mawk>=0.1.4,<0.2",
    "watchdog>=3.0.0,<4",
    "filelock>=3.12.0,<4",
    "argh>=0.30,<0.31",
    "rich>=13.3.5,<14",
    "tomlkit>=0.12.1,<0.13",
    "copier>=9,<10",
    "brei>=0.2.3,<0.3",
    "rich-argparse>=1.4.0,<2",
    "pexpect>=4.9.0,<5",
    "pyyaml>=6.0.1,<7",
]

[project.urls]
Homepage = "https://entangled.github.io/"
Repository = "https://github.com/entangled/entangled.py"

[project.scripts]
entangled = "entangled.main:cli"

[dependency-groups]
dev = [
    "pytest>=7.3.1,<8",
    "mypy>=1.3.0,<2",
    "black>=23.3.0,<24",
    "pytest-cov>=4.0.0,<5",
    "mkdocs>=1.4.3,<2",
    "mkdocs-material>=9.1.13,<10",
    "mkdocstrings[python]>=0.21.2,<0.22",
    "pytest-asyncio>=0.21.1,<0.22",
    "ruff>=0.4.4,<0.5",
    "types-pyyaml>=6.0.12.20240311,<7",
    "types-pygments>=2.18.0.20240506,<3",
    "types-colorama>=0.4.15.20240311,<0.5",
]

[tool.hatch.build.targets.sdist]
include = ["entangled"]

[tool.hatch.build.targets.wheel]
include = ["entangled"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["test"]

[tool.mypy]
packages = ["entangled"]
