[project]
name = "entangled-cli"
version = "2.4.0"
description = "Literate Programming toolbox"
authors = [{ name = "Johan Hidding", email = "j.hidding@esciencecenter.nl" }]
requires-python = ">=3.12,<4"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
        "mawk>=0.1.7,<0.2",
        "filelock>=3.12.0,<4",
        "argh>=0.30,<0.31",
        "rich>=13.3.5,<14",
        "tomlkit>=0.12.1,<0.13",
        "copier>=9,<10",
        "brei>=0.2.3,<0.3",
        "rich-argparse>=1.4.0,<2",
        "pexpect>=4.9.0,<5",
        "pyyaml>=6.0.1,<7",
        "repl-session>=0.2.0",
        "msgspec>=0.19.0",
        "watchdog>=6.0.0",
        "click>=8.3.0",
        "rich-click>=1.9.4",
]

[project.urls]
Homepage = "https://entangled.github.io/"
Repository = "https://github.com/entangled/entangled.py"

[project.scripts]
entangled = "entangled.main:cli"

[dependency-groups]
dev = [
        "pytest>=7.3.1,<8",
        "mypy>=1.18,<2",
        "black>=23.3.0,<24",
        "pytest-cov>=4.0.0,<5",
        "mkdocs>=1.4.3,<2",
        "mkdocs-material>=9.7,<10",
        "mkdocstrings[python]>=0.30",
        "pytest-asyncio>=0.21.1,<0.22",
        "ruff>=0.14",
        "types-pyyaml>=6.0.12.20240311,<7",
        "types-pygments>=2.18.0.20240506,<3",
        "types-colorama>=0.4.15.20240311,<0.5",
        "python-lsp-server>=1.13.1",
        "pyright>=1.1.405",
        "types-pexpect>=4.9.0.20250916",
        "types-PyYAML>=6.0.1,<7",
        "pytest-timeout>=2.4.0",
        "ty>=0.0.1a24",
]

[tool.hatch.build.targets.sdist]
include = ["entangled"]

[tool.hatch.build.targets.wheel]
include = ["entangled"]

[tool.hatch.build.targets.wheel.shared-data]
"man/entangled.1" = "man/man1/entangled.1"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["test"]

[tool.mypy]
packages = ["entangled"]

[tool.uv.sources]
msgspec = { git = "https://github.com/jcrist/msgspec" }
